# vampire-survivors

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  justfile
app/core/: Cargo.toml
app/core/benches/: spatial_grid.rs
app/core/src/: components.rs  constants.rs  events.rs  lib.rs  player.rs  resources.rs  states.rs  types.rs
app/core/src/components/: collectible.rs  enemy.rs  mod.rs  physics.rs  player.rs  weapon.rs
app/core/src/config/: character.rs  enemy.rs  game.rs  mod.rs  passive.rs  player.rs  stage.rs  weapon.rs
app/core/src/config/weapon/: bible.rs  cross.rs  fire_wand.rs  garlic.rs  knife.rs  magic_wand.rs  mod.rs  thunder_ring.rs  whip.rs
app/core/src/materials/: glow.rs  mod.rs
app/core/src/resources/: game_data.rs  level_up.rs  meta.rs  mod.rs  pending_upgrade.rs  settings.rs  spatial.rs  spawner.rs
app/core/src/systems/: apply_upgrade.rs  collision.rs  damage.rs  difficulty.rs  enemy_cull.rs  enemy_spawn.rs  game_over.rs  game_timer.rs  gem_attraction.rs  gem_drop.rs  kill_count.rs  level_up_choices.rs  mod.rs  persistence.rs  player.rs  player_collision.rs  projectile.rs  spatial.rs  victory.rs  weapon_bible.rs  weapon_cooldown.rs  weapon_cross.rs  weapon_fire_wand.rs  weapon_garlic.rs  weapon_knife.rs  weapon_magic_wand.rs  weapon_thunder_ring.rs  weapon_whip.rs
app/core/src/systems/enemies/: ai.rs  boss_ai.rs  boss_scythe.rs  boss_spawn.rs  cull.rs  difficulty.rs  dragon.rs  medusa.rs  mini_boss_spawn.rs  mod.rs  spawn.rs
app/core/src/types/: character.rs  enemy.rs  game.rs  gem_tier.rs  mod.rs  stage.rs  weapon.rs
docs/: 04_ui_ux.md  (+9 more)
(+145 files in other folders)
