[workspace]
resolver = "2"
members = [
    "app/core",
    "app/audio",
    "app/assets",
    "app/vampire-survivors",
]

[workspace.dependencies]
bevy = "0.17.3"
bevy_kira_audio = "0.24.0"
rand = "0.10.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
