[package]
name = "vs-core"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { workspace = true }
rand = { workspace = true }
ron = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }

[[bench]]
name = "spatial_grid"
harness = false
